--- a/Scolaa System/package.json
+++ b/Scolaa System/package.json
@@ -2,10 +2,10 @@
     "name": "mean-stack-registration-login-example",
     "version": "1.0.0",
     "description": "MEAN Stack User Registration and Login Example Application",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/cornflourblue/mean-stack-registration-login-example.git"
-    },
+    //"repository": {
+    //    "type": "git",
+    //    "url": "https://github.com/cornflourblue/mean-stack-registration-login-example.git"
+    //},
     "dependencies": {
         "bcryptjs": "^2.1.0",
         "body-parser": "^1.13.2",
